# bash_history_db

./: .bazelrc  BUILD.sqlite  MODULE.bazel  README.md  WORKSPACE
cli/: BUILD  basic_test.cc  create.sql  db.cc  db.h  insert.sql  log_main.cc  sqlite_handle.cc  sqlite_handle.h  test_main.cc
