module(name = "bash_history_db")

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.1",
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "sqlite3",
    version = "3.47.2",
)
