module(name = "bash_history_db")

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
)

bazel_dep(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.3",
)

bazel_dep(
    name = "com_github_bcsgh_test_base",
    version = "0.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "googletest",
    version = "1.16.0",
    dev_dependency = True,
)

bazel_dep(
    name = "sqlite3",
    version = "3.47.2",
)
